[gd_scene load_steps=5 format=2]

[ext_resource path="res://sistema/estadistiques.gd" type="Script" id=1]
[ext_resource path="res://fonts/plantilles/roboto12.tres" type="DynamicFont" id=2]
[ext_resource path="res://sistema/paleta.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.788235, 1, 1 )

[node name="estadistiques" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -664.0
margin_bottom = -240.0
script = ExtResource( 1 )

[node name="fonscolor" type="ColorRect" parent="."]
margin_right = 360.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.133333, 0.290196, 0.203922, 0.486275 )

[node name="caixavertical1" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 40.0

[node name="Tabs" type="Tabs" parent="caixavertical1"]
margin_right = 249.0
margin_bottom = 24.0

[node name="textframes" type="Label" parent="caixavertical1"]
margin_top = 28.0
margin_right = 249.0
margin_bottom = 42.0
text = "Frames per segon:"

[node name="barraframes" type="ProgressBar" parent="caixavertical1"]
margin_top = 46.0
margin_right = 249.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 14 )
custom_styles/fg = SubResource( 1 )
max_value = 60.0
percent_visible = false

[node name="text2" type="Label" parent="caixavertical1"]
margin_top = 64.0
margin_right = 249.0
margin_bottom = 79.0
custom_fonts/font = ExtResource( 2 )
text = "lol"

[node name="text3" type="Label" parent="caixavertical1"]
margin_top = 83.0
margin_right = 249.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 2 )
text = "Açò és unaltre text de prova un poc més abaix"

[node name="text4" type="Label" parent="caixavertical1"]
margin_top = 102.0
margin_right = 249.0
margin_bottom = 117.0
custom_fonts/font = ExtResource( 2 )
text = "més text"

[node name="tabcontainer" type="TabContainer" parent="caixavertical1"]
margin_top = 121.0
margin_right = 249.0
margin_bottom = 321.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="tab" type="Tabs" parent="caixavertical1/tabcontainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Label" type="Label" parent="caixavertical1/tabcontainer/tab"]
anchor_right = 1.0
anchor_bottom = 4.375
margin_bottom = -81.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "text prova"
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="paleta color" type="Tabs" parent="caixavertical1/tabcontainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="paleta" parent="caixavertical1/tabcontainer/paleta color" instance=ExtResource( 3 )]

[node name="Tabs3" type="Tabs" parent="caixavertical1/tabcontainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
